<resources>
    <string name="app_name">Caculdora</string>
    <string name="bt0">0</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="btComma">.</string>
    <string name="btEqual">=</string>
    <string name="btPlus">+</string>
    <string name="btResta">-</string>
    <string name="btX">X</string>
    <string name="btSlash">/</string>
    <string name="btClear">C</string>ç
    <string name="btDelete">D</string>
    <string name="btPorcentaje">%</string>
    <string name="btMasMenos">+/-</string>
</resources>