<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="-152dp"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt0"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt0"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh2" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMasMenos"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btMasMenos"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btComa"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btComma"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEqual"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btEqual"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt1"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt1"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt2"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt2"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt3"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt3"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPlus"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btPlus"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh3" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt4"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt4"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt5"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt5"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt6"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt6"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMenos"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btResta"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt7"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt7"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt8"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt8"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt9"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt9"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btX"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btX"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btClear"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh6" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btBorrar"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/borrar"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh6"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSlash"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btSlash"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPorcentaje"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btPorcentaje"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh6" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="330dp"
        android:textSize="40sp"
        android:text="@string/bt0"
        android:textAlignment="viewEnd"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/gh6"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintTop_toBottomOf="@id/gh7"/>

    <TextView
        android:id="@+id/screenSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/gh6"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gh7"
        app:layout_constraintVertical_bias="0.497" />

</androidx.constraintlayout.widget.ConstraintLayout>

